# Os-Labs

./: README.md
Lab1/: CMakeLists.txt  main.cpp
Lab1/Number/: CMakeLists.txt  Number.cpp  Number.h
Lab1/Vector/: CMakeLists.txt  Vector.h
Main/: Main.vcxproj  Source.cpp
NumberLibraries/: Number.cpp  Number.h
Vector/: Vector.cpp  Vector.h  Vector.vcxproj
lab1-libs/linux/: Lab1br.sh
lab1-libs/linux/Number/: CMakeLists.txt
lab1-libs/linux/Vector/: Vector.cpp
lab1-libs/windows/: NumberLibraries.sln
lab1-libs/windows/Main/: Source.cpp
lab1-libs/windows/NumberLibraries/: Number.cpp  Number.h  NumberLibraries.vcxproj
lab2-easy-matrix/: MatrixMultiplier.cpp  MatrixMultiplier.h  main.cpp
lab2-matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.tpp  main.cpp
lab2_threads_matrix/linux/: MatrixMultiplier.cpp  MatrixMultiplier.h
lab3/: BufferedChannel.h  CMakeLists.txt  main.cpp
lab3/matrix-multiplier/: MatrixMultiplier.h
lab4-process_killer/linux/user/: CMakeLists.txt  user.cpp
lab4-process_killer/windows/killer/: CMakeLists.txt  killer.cpp
lab4-process_killer/windows/user/: user.cpp
lab5-pipe/linux/: CMakeLists.txt  main.cpp
lab5-pipe/linux/1/: CMakeLists.txt  m.cpp
lab5-pipe/linux/2/: CMakeLists.txt  a.cpp
lab5-pipe/linux/3/: p.cpp
lab5-pipe/linux/4/: s.cpp
lab5-pipe/windows/: main.cpp
lab5-pipe/windows/1/: m.cpp
named_pipe/linux/: CMakeLists.txt  client.cpp  server.cpp
named_pipe/windows/: client.cpp  server.cpp
process_killer/killer/: killer.cpp
process_killer/user/: user.cpp
windows_threads/: CMakeLists.txt
(+7 files in other folders)
